<resources>
    <string name="app_name">기린</string>
    <string name="app_name_dev">[dev]기린</string>
    <string name="fab_content_desc">추가버튼</string>
    <string name="emotion_state_desc"><![CDATA[<font color="#%1$s">%2$s</font>를 선택하셨어요.]]></string>
    <string name="need_type_social">사회적 욕구 - 소속감, 협력, 사랑</string>
    <string name="need_type_survival">생존의 욕구 - 신체, 정서, 안전</string>
    <string name="need_type_fun">재미의 욕구 - 놀이, 배움</string>
    <string name="need_type_meaning">삶의 의미의 욕구 - 영성, 인생, 예찬</string>
    <string name="need_type_strong">힘의 욕구 - 성취, 인정, 자존</string>
    <string name="need_type_freedom">자유의 욕구 - 독립, 자율성, 선택</string>
    <string name="emotion">감정</string>
    <string name="need">욕구</string>
    <string name="stimulus"><![CDATA[자극]]></string>
    <string name="emotion_type_satisfied">좋다</string>
    <string name="emotion_type_unsatisfied">나쁘다</string>
    <string name="emotion_type_unclear">모르겠다</string>
    <string name="format_date">%1$ty.%1$tm.%1$td</string>
    <string name="format_time">%1$Tk:%1$TM</string>
    <string name="format_datetime">%1$tY.%1$tm.%1$td %1$Tk:%1$TM</string>
    <string name="date">날짜</string>
    <string name="find_emotion_desc"><![CDATA[기분이 어떠신가요?]]></string>
    <string name="intro_desc"><![CDATA[지금부터 내 <font color="#%1$s">감정</font>과<br>연결된 <font color="#%1$s">욕구</font>를 찾을꺼에요.]]></string>
    <string name="stimulus_desc1"><![CDATA[내 기분의 원인이 되는<br><font color="#%1$s">사건(자극)</font>을 떠올려보세요.]]></string>
    <string name="stimulus_desc2"><![CDATA[그때 상황을 충분히 되짚어 봅니다.]]></string>
    <string name="stimulus_desc3"><![CDATA[그 사건을 단어 혹은 짧은 문장으로 써주세요.]]></string>
    <string name="complete"><![CDATA[완료]]></string>
    <string name="tooltip_find_item"><![CDATA[화면을 넘기며\n와닿는 감정들을\n선택해 주세요.]]></string>
    <string name="reduce_emotion_intro_desc1"><![CDATA[다양한 감정을 고르셨네요.]]></string>
    <string name="reduce_emotion_intro_desc2"><![CDATA[그중에 좀더 와닿는 감정을<br>최대 <font color="#%1$s">%2$s개</font>까지 골라주세요.]]></string>
    <string name="alert_over_max_item_count"><![CDATA[최대 %1$d까지 선택할 수 있습니다]]></string>
    <string name="reduce_need_intro_desc1"><![CDATA[다양한 욕구를 고르셨네요.]]></string>
    <string name="reduce_need_intro_desc2"><![CDATA[그중에 좀더 와닿는 욕구를<br>최대 <font color="#%1$s">%2$s개</font>까지 골라주세요.]]></string>
    <string name="setting"><![CDATA[설정]]></string>
    <string name="share"><![CDATA[공유하기]]></string>
    <string name="fail"><![CDATA[실패]]></string>
    <string name="tooltip_start_btn"><![CDATA[버튼을 눌러 기록을 시작할 수 있어요.]]></string>
    <string name="tooltip_progress_bar"><![CDATA[진행 상태는 여기에 표시되요!]]></string>
    <string name="tooltip_complete"><![CDATA[완료 버튼을 눌러 다음 단계로 넘어가세요.]]></string>
    <string name="desc_empty_record"><![CDATA[저장된 기록이 없네요.\n내 마음을 알고싶을 때 사용해 보세요!]]></string>
    <string name="desc_promotion"><![CDATA[내 마음을 알고싶을 때\n사용해 보세요!]]></string>
    <string name="desc_no_record_to_export"><![CDATA[내보낼 기록이 없습니다.]]></string>
    <string name="desc_record_imported"><![CDATA[%1$d의 기록이 저장되었습니다.]]></string>
    <string name="notification_channel_remind_alarm_name">꾸준히 사용 알림</string>
    <string name="notification_channel_remind_alarm_desc">주기적으로 마음을 확인할 수 있도록 알려준다.</string>
    <string name="remind_noti_default_title">오늘 하루 어땠어요?</string>
    <string name="remind_noti_default_text">내 마음이 괜찮은지 확인해보세요!</string>
    <string name="remind_noti_emotion_title">익숙한 감정 → %1$s</string>
    <string name="remind_noti_emotion_text">나의 최근 감정들을 확인해 보세요!</string>
    <string name="remind_noti_need_title">익숙한 욕구 → %1$s</string>
    <string name="remind_noti_need_text">나의 최근 욕구들을 확인해 보세요!</string>
    <string name="delete"><![CDATA[삭제]]></string>
    <string name="recent_year"><![CDATA[최근 1년]]></string>
    <string name="recent_3month"><![CDATA[최근 3개월]]></string>
    <string name="recent_month"><![CDATA[최근 한달]]></string>
    <string name="recent_week"><![CDATA[최근 7일]]></string>
    <string name="recent_day"><![CDATA[최근 하루]]></string>
    <string name="app_name_for_share"><![CDATA[by 기린앱]]></string>
    <string name="app_version"><![CDATA[앱 버전: %1$s]]></string>
    <string name="skip"><![CDATA[건너뛰기]]></string>
    <string name="start"><![CDATA[시작하기]]></string>
    <string name="next"><![CDATA[다음]]></string>
</resources>