<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.zettafantasy.giraffe.feature.record.RecordViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.record.RecordsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <View
                android:id="@+id/empty_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/ic_question_mark_48px"
                android:backgroundTint="@color/accent"
                app:layout_constraintBottom_toTopOf="@id/empty_txt"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/empty_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/desc_promotion"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- 테이블 헤더 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.2"
                    android:text="@string/date"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.266"
                    android:text="@string/stimulus"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.266"
                    android:text="@string/emotion"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.266"
                    android:text="@string/need"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/record_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="@dimen/emotion_margin"
                android:paddingBottom="@dimen/emotion_margin"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/record_view"
                tools:orientation="vertical" />
        </LinearLayout>
    </FrameLayout>
</layout>